# geant4medipix

./: .gitignore  .zenodo.json  CMakeLists.txt  DetectorConfig.ini  G4Medipix.cc  LICENSE  NISTMaterialDB.txt  README  README.md  doxy.conf  tubes_list.txt
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorConstructionBase.hh  DetectorConstructionDefault.hh  DetectorHit.hh  DetectorMessenger.hh  DetectorSD.hh  Digit.hh  DigitizerWeightField.hh  EventAction.hh  ExportBase.hh  ExportHDF.hh  ExportMgr.hh  ExportRaw.hh  HistoManager.hh  MpxDetector.hh  OutputMessenger.hh  PhysicsList.hh  PhysicsListMessenger.hh  PreampMedipix.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  Run.hh  RunAction.hh  StackingAction.hh  StepMax.hh  StepMaxMessenger.hh  SteppingAction.hh  SteppingVerbose.hh  TrackingAction.hh
macros/: alpha.mac  am241.mac  dacscan.mac  electron.mac  fluorescence.mac  gamma.mac  gamma_calibration.mac  gui.mac  plotHisto.C  proton.mac  run1.mac  run2.mac  vis.mac
macros/tubes/: 100kVp  101kVp  102kVp  103kVp  104kVp  105kVp  106kVp  107kVp  108kVp  109kVp  110kVp  111kVp  112kVp  113kVp  114kVp  115kVp  116kVp  117kVp  118kVp  119kVp  120kVp  121kVp  122kVp  123kVp  124kVp  125kVp  126kVp  127kVp  128kVp  129kVp  130kVp  131kVp  132kVp  133kVp  134kVp  135kVp  136kVp  137kVp  138kVp  139kVp  (+71 more)
potential/: wp_ascii_to_bin.py  wp_ascii_to_bin_rewrite.py
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstructionBase.cc  DetectorConstructionDefault.cc  DetectorHit.cc  DetectorMessenger.cc  DetectorSD.cc  Digit.cc  DigitizerWeightField.cc  EventAction.cc  ExportHDF.cc  ExportMgr.cc  ExportRaw.cc  HistoManager.cc  MpxDetector.cc  OutputMessenger.cc  PhysicsList.cc  PhysicsListMessenger.cc  PreampMedipix.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  Run.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  SteppingVerbose.cc  TrackingAction.cc
